# libplist

./: CMakeLists.txt  configure.ac
.github/workflows/: build.yml
cython/: Makefile.am
src/: Makefile.am
